# meinsweeper

./: .gitignore  LICENSE  README.md  clean_and_build.py  pyproject.toml  run_all.py  setup.py
meinsweeper/: __init__.py  meinsweeper.py  task.py  todo.md  version.py
meinsweeper/modules/: __init__.py  check_gpu.py  configuration.py  logger.py  run_manager.py  tasks.py  utils.py
meinsweeper/modules/helpers/: debug_logging.py  retry.py  utils.py
meinsweeper/modules/nodes/: __init__.py  abstract.py  local_async_node.py  ssh_node.py
meinsweeper/tests/: icl_run_test.py  logger_test.py  test_local_async_node.py  test_run_manager.py  test_run_sweep.py  test_run_sweep_with_gpu_occupation.py  test_simple_mslogger.py
runs/single/predinet/mnist_triples/train/.hydra/: config.yaml  hydra.yaml
runs/single/predinet/mnist_triples/train/wandb/: latest-run
runs/single/predinet/mnist_triples/train/wandb/run-20221123_150958-3dpin5nh/: run-3dpin5nh.wandb
runs/single/predinet/mnist_triples/train/wandb/run-20221123_150958-3dpin5nh/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
runs/single/predinet/mnist_triples/train/wandb/run-20221123_150958-3dpin5nh/files/media/graph/: graph_0_summary_7b51710f9ee9ca7d56ca.graph.json
