[build-system]
requires = [ "setuptools>=45", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "meinsweeper"
version = "0.3.2"
description = "MeinSweeper is a light-weight framework for running experiments on arbitrary compute nodes"
readme = "README.md"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
requires-python = ">=3.7"
dependencies = [ "asyncssh", "rich", "psutil", "duecredit",]
[[project.authors]]
name = "Alex Spies"
email = "alex@afspies.com"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/afspies/meinsweeper"
"Bug Tracker" = "https://github.com/afspies/meinsweeper/issues"
Icon = "https://raw.githubusercontent.com/afspies/meinsweeper/master/meinsweeper/logo.png"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
meinsweeper = [ "logo.png",]

[tool.setuptools.dynamic.readme]
file = [ "README.md",]
content-type = "text/markdown"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "*",]
exclude = [ "clean_and_build.py",]
